[feat] Swagger improvements
